# libccp4

./: .index  AUTHORS  CHANGES  CMakeLists.txt  ChangeLog  MAKE_CCPLIB.COM  MOSFLMBITS.COM  Makefile  Makefile.am  Makefile.convex  Makefile.in  Makefile_al  Makefile_sgi  Makefile_york  NEWS  QTYPE.for  README  README.graflib  README.unix_for  aclocal.m4  atomsf.for  autogen.sh  binsort.c  ccp4-config.cmake  ccp4_lib.h  ccp4c.pc.cmakein  ccp4f.pc.cmakein  ccplib.h  chelp.c  chelp.h  config.h.in  config.yaml  configure  configure.ac  diskio.f  fdevice.h  fftlib.dif  fgl.h  frodo_maplib.for  gdummy.f  (+30 more)
.github/workflows/: update.yml
build-aux/: ltmain.sh
ccp4/: Makefile.am  Makefile.in  ccp4_array.c  ccp4_array.h  ccp4_errno.h  ccp4_file_err.h  ccp4_fortran.h  ccp4_general.c  ccp4_general.h  ccp4_parser.c  ccp4_parser.h  ccp4_program.c  ccp4_program.h  ccp4_spg.h  ccp4_sysdep.h  ccp4_types.h  ccp4_unitcell.c  ccp4_unitcell.h  ccp4_utils.h  ccp4_vars.h  cmap_accessor.c  cmap_close.c  cmap_data.c  cmap_data.h  cmap_errno.h  cmap_header.c  cmap_header.h  cmap_labels.c  cmap_labels.h  cmap_open.c  cmap_skew.c  cmap_skew.h  cmap_stats.c  cmap_stats.h  cmap_symop.c  cmaplib.h  cmaplib_f.h  cmtzlib.c  cmtzlib.h  csymlib.c  (+17 more)
cmake/: source.cmake
data/: Makefile.am  Makefile.in  README  atomsf.lib  atomsf_neutron.lib  font84.ascii  fontpack.f  syminfo.lib  symop.lib
fortran/: Makefile.am  Makefile.in  binsort.h  binsortint.c  cciflib.f  cciflib.fh  ccp4_diskio_f.c  ccp4_general_f.c  ccp4_parser_f.c  ccp4_unitcell_f.c  ccplib.f  cmaplib_f.c  cmtzlib_f.c  csymlib_f.c  dna_header.fh  dna_output.f  fftlib.f  harderiv.inc  harshell.inc  harsymm.inc  harv_dummy.f  harvest.inc  harvlib.f  hybrid_36_f.c  keyparse.f  lgglib.f  libhtml.f  library_f.c  modlib.f  mthlib.for  pack_f.f  parser.f  plot84lib.f  plotsubs.f  pxxml.f  rwbrook.f  sorting_main.f  testlib.f  unix.m4  vms.for  (+2 more)
macros/: ccif.m4  mmdb.m4
